--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -61,8 +61,10 @@
 
         <activity
             android:name=".mapstest"
-            android:label="@string/title_activity_mapstest"
-            ></activity>
+            android:label="@string/title_activity_mapstest" />
+        <activity
+            android:name=".Navbar"
+            android:label="@string/title_activity_navbar"></activity>
     </application>
 
 </manifest>
